--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "body-parser": "~1.15.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
+    "crypto": "0.0.3",
     "debug": "~2.2.0",
     "express": "~4.14.0",
     "express-session": "^1.15.4",
     "hbs": "~4.0.1",
     "mongoose": "^4.11.3",
     "morgan": "~1.7.0",
+    "multer": "^1.3.0",
     "passport": "^0.3.2",
     "passport-http": "^0.3.0",
     "passport-local": "^1.0.0",
