--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "~4.14.0",
     "express-session": "^1.15.4",
     "hbs": "~4.0.1",
+    "lodash": "^4.17.4",
     "mongoose": "^4.11.3",
     "morgan": "~1.7.0",
     "multer": "^1.3.0",
